cks/ghost-blog.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ghost-blog
spec:
  finalizers:
  - kubernetes
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: ghost-blog-deployment
  namespace: ghost-blog
spec:
  selector:
    matchLabels:
      app: ghost
  replicas: 1 
  template:
    metadata:
      labels:
        app: ghost
    spec:
      containers:
      - name: ghost
        image: ghost:3.42
        ports:
        - containerPort: 2368
---
apiVersion: v1
kind: Service
metadata:
  name: ghost-blog-service
  namespace: ghost-blog
spec:
  selector:
    app: ghost
  ports:
    - protocol: TCP
      port: 80
      targetPort: 2368
