cks/ghost-secure.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ghost-blog
spec:
  finalizers:
  - kubernetes
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: ghost-blog-secure-deployment
  namespace: ghost-blog
spec:
  selector:
    matchLabels:
      app: ghost-secure
  replicas: 1 
  template:
    metadata:
      labels:
        app: ghost-secure
    spec:
      containers:
      - name: ghost
        image: ghost:3.42
        ports:
        - containerPort: 3001
      - name: nginx
        #Alter image ot test sidecarconstraint 
        image: nginx
        ports:
        - containerPort: 443
        volumeMounts:
        - mountPath: /etc/ssl/
          name: nginx-secrets
          readOnly: true
        - mountPath: /etc/nginx/conf.d/
          name: nginx-config
          readOnly: true
        securityContext:
          capabilities:
          add: ["NET_ADMIN"]
      volumes:
      - name: nginx-secrets
        secret:
          defaultMode: 420
          items:
          - key: server.crt
            path: nginx.crt
          - key: server-key.pem
            path: nginx.key
          secretName: nginx-secrets
      - configMap:
          defaultMode: 420
          items:
          - key: nginx-secure.conf
            path: default.conf
          name: nginx-sidecar-conf
        name: nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: ghost-blog-secure-service
  namespace: ghost-blog
spec:
  selector:
    app: ghost-secure
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
