cks/nginx-secure.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: secure-server
  namespace: ghost-blog
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1 # tells deployment to run 1 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        #Alter image ot test sidecarconstraint 
        image: nginx
        ports:
        - containerPort: 443
        volumeMounts:
        - mountPath: /etc/ssl/
          name: nginx-secrets
          readOnly: true
        - mountPath: /etc/nginx/conf.d/
          name: nginx-config
          readOnly: true
      volumes:
      - name: nginx-secrets
        secret:
          defaultMode: 420
          items:
          - key: server.crt
            path: nginx.crt
          - key: server-key.pem
            path: nginx.key
          secretName: nginx-secrets
      - configMap:
          defaultMode: 420
          items:
          - key: nginx.conf
            path: default.conf
          name: nginx-conf
        name: nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-secure-service
  namespace: ghost-blog
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
---
